# ROS

./: README.md
1_star/new/: newstar.cpp  star.cpp  star.sh
2_avoidance/new/: avoidance.cpp  avoidance.launch  avoidance.yaml  cone_avoidance.cpp  v_control.cpp  v_rotation.cpp
360_drone/cam_ws/devel/: .catkin  .rosinstall  setup.sh
360_drone/cam_ws/devel/include/camera_processor/: PointDepth.h
360_drone/cam_ws/devel/lib/camera_processor/: camera_processor_node
360_drone/cam_ws/devel/lib/depth_visualizer/: depth_visualizer_node
360_drone/cam_ws/devel/lib/pkgconfig/: camera_processor.pc  depth_visualizer.pc  point_depth_viewer.pc  realsense_pkg.pc
360_drone/cam_ws/devel/lib/point_depth_viewer/: point_depth_viewer_node
360_drone/cam_ws/devel/lib/realsense_pkg/: realsense_node
360_drone/cam_ws/src/camera_processor/: CMakeLists.txt  package.xml
360_drone/cam_ws/src/camera_processor/launch/: camera_processor.launch
360_drone/cam_ws/src/camera_processor/msg/: PointDepth.msg
360_drone/cam_ws/src/camera_processor/scripts/: listener.py
360_drone/cam_ws/src/camera_processor/src/: camera_processor.cpp
360_drone/cam_ws/src/depth_visualizer/: CMakeLists.txt  package.xml
360_drone/cam_ws/src/depth_visualizer/launch/: depth_visualizer.launch
360_drone/cam_ws/src/depth_visualizer/src/: depth_visualizer.cpp  depth_visualizer_blackwhite.cpp
360_drone/cam_ws/src/point_depth_viewer/: CMakeLists.txt  package.xml
360_drone/cam_ws/src/point_depth_viewer/config/: config.yaml
360_drone/cam_ws/src/point_depth_viewer/src/: point_depth_viewer.cpp
360_drone/cam_ws/src/realsense_pkg/: CMakeLists.txt  package.xml
360_drone/cam_ws/src/realsense_pkg/src/: find.cpp  find_depthat.cpp  find_final_bw.cpp  find_turn.cpp
360_drone/catkin_ws/devel/include/tutorial_vision/: BoundingBox.h  BoundingBoxes.h  ObjectCount.h
360_drone/catkin_ws/devel/lib/dn_test_package/: dn_test
360_drone/catkin_ws/devel/lib/pkgconfig/: tutorial_all.pc  tutorial_navigation.pc  tutorial_vision.pc
360_drone/catkin_ws/devel/lib/tutorial_all/: run_craic_task_node
360_drone/catkin_ws/devel/lib/tutorial_basic/: crossing_door_node  takeoff_mission_node  takeoff_node  test_turning_node  vel_control_node  view_darknet_node
360_drone/catkin_ws/devel/lib/tutorial_catapult/: actuator_driver  item_deliver_node
360_drone/catkin_ws/devel/lib/tutorial_navigation/: gps_tf_forward_node  navigation_node  odom_forward_node
360_drone/catkin_ws/devel/lib/tutorial_vision/: accurately_land_node  qr_detect_node  yolo_detect_node
360_drone/catkin_ws/src/dn_test_package/: CMakeLists.txt  package.xml
360_drone/catkin_ws/src/dn_test_package/src/: dn_test.cpp  dn_test_sync.cpp
360_drone/catkin_ws/src/tutorials/tutorial_basic/: CMakeLists.txt
360_drone/catkin_ws/src/tutorials/tutorial_vision/: CMakeLists.txt  README.md  zal_yolo.sh
3_turn_avoidance/: cone_avoidance.cpp  turn_avoidance.cpp  turn_avoidance.yaml
4_door/: door_pass.cpp  test.cpp  test_lidar.cpp  testfile.txt
5_winter/: darknet_ros.launch  datascan.cpp  datatest.txt  testipad.cpp  usb_cam_winter.launch  winter.cpp  winter.launch  winter.sh  winter.yaml  winter_another.cpp  winter_vision.sh
6_race/: crossing_ultra.cpp  fsm_state.cpp  gain_depth_simple.cpp  takeoff_new.cpp
6_race/catkin_ws/devel/lib/pkgconfig/: livox_laser_simulation.pc  tutorial_basic.pc  tutorial_catapult.pc  tutorial_gazebo.pc
6_race/catkin_ws/devel/lib/tutorial_all/: run_craic_task_node
6_race/catkin_ws/devel/lib/tutorial_basic/: takeoff_node  vel_control_node
6_race/catkin_ws/src/livox_laser_simulation/: CMakeLists.txt
6_race/catkin_ws/src/tutorials/: .gitignore
7_paper/: paper.cpp  paper.sh  paper_detect.cpp  winter.sh
Tutorial/: url.txt  遥控器操作.txt
gazebo/: avoidance.cpp  collision_avoidance.cpp  cone_avoidance.cpp
kis_avoidance/Try/: old_collision_avoidance.cpp
kislate_work/: circle.cpp  crossing_door.cpp  qr_detect.md  test.cpp  turn.cpp  添加消息.md
kislate_work/410_add/shell/easy/: 1-test_pixhawk.sh  2-test_rplidar.sh  3-test_usbcam.sh  4-test_pose_estimtor.sh  5-test_yolo.sh
kislate_work/410_add/shell/hard/: 4x4ABC.sh  firematch.sh
kislate_work/410_add/shell/middle/: .face_rec.sh.swo  .face_rec.sh.swp  cross_fake.sh  face_rec.sh  gesture.sh  uav_cruise.sh  waypoint.sh
kislate_work/kis_avoidance/: collision_avoidance.yaml  copy_hsq.cpp
kislate_work/kis_avoidance/Try/: old_collision_avoidance.cpp  oold_avoidance.cpp
kislate_work/kis_door/: crossing_door.cpp  find_door.c  test.cpp
kislate_work/vision/: CMakeLists.txt  detector.cpp  image_capture_client.cpp  package.xml  winter(无识别).cpp  winter.cpp  winter.yaml  winter_image.cpp  winter_new.cpp  官方库中的二维码类.md  通过相机内参转换坐标.md
kislate_work/vision/msg/: BoundingBox.msg
kislate_work/vision/src/: opencv_cpp_yolov5.cpp  qrcode_cpp_detector(count).cpp  qrcode_cpp_yolov5.cpp  yolo_detector.h
new/config/: box.yaml
new/src/: YoloObjectDetector.cpp
one/new/: star.yaml
one/old/px4_pos_estimator/: px4_pos_estimator.cpp
opencv_cpp_yolov5/src/opencv_cpp_yolov5/shell/: all.sh
opencv_cpp_yolov5/src/opencv_cpp_yolov5/src/: opencv_cpp_yolov5.cpp  qrcode_detector.cpp  video_stream.cpp  yolo_detector.cpp  yolo_detector.h
shell/: fly.sh  fly_360.sh
two/new/: collision_avoidance.cpp
two/old/: collision_avoidance.cpp
vision_for_study/: houfu.py
yolo/config/: door.yaml
yolo/launch/: box.launch  darknet_ros.launch
定点飞行/new/: newstar.cpp  square.cpp  star.launch  wrong_examples.cpp
(+138 files in other folders)
