<?xml version="1.0"?>
<package format="2">
  <name>image_capture_client</name>
  <version>0.0.1</version>
  <description>Image capture client for darknet_ros</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_srvs</depend>
  <depend>darknet_ros_msgs</depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>darknet_ros_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>darknet_ros_msgs</exec_depend>
</package>